--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <meta name="theme-color" content="#d0c2e8">
   
   
-  <meta name="application-name" content="PWA Template">
-  <meta name="description" content="A starter template for any Progressive Web Application (PWA)">
+  <meta name="application-name" content="CryptoFolio">
+  <meta name="description" content="A simple Progressive Web Application (PWA) and aggregator to watch different crypto portfolios at just one place">
   <meta name="mobile-web-app-capable" content="yes">
   
-  <meta name="apple-mobile-web-app-title" content="PWA Template">
+  <meta name="apple-mobile-web-app-title" content="CryptoFolio">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="apple-touch-startup-image" href="img/pwa.png">
@@ -36,7 +36,7 @@
 		<a href="./" id="logo">
 			<img alt="Logo" src="img/pwa.png">
 		</a>
-		<span class="title">Template</span>
+		<span class="title">CryptoFolio</span>
 	</header>
 	
 	<main>
