--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
 	<main>
 		<div id="connexion_status"></div>
 		
+		<div id="content">
+			
+		</div>
+		
 		
 		
 		<button id="addButton" class="fab-button">
