--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/modern-css-reset@1.1.0/dist/reset.min.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.x-git.min.js"></script>
   <link rel="icon" href="img/pwa.png" type="image/png" />
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#d0c2e8">
