--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>PWA Template</title>
+  <title>CryptoFolio</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/modern-css-reset@1.1.0/dist/reset.min.css" rel="stylesheet">
